--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reverse-sentence",
+  "name": "@salmuzblues/reverse-sentence",
   "version": "1.0.0",
   "description": "Reverses the words of a sentence",
   "main": "index.js",
