--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   },
   "author": "Juan Carranza Alarcón",
   "license": "MIT",
+  "devDependencies": {
+    "prettier": "2.3.2"
+  },
+  "dependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/salmuzblues/reverse-sentence.git"
@@ -16,9 +20,5 @@
   "bugs": {
     "url": "https://github.com/salmuzblues/reverse-sentence/issues"
   },
-  "homepage": "https://github.com/salmuzblues/reverse-sentence#readme",
-  "devDependencies": {
-    "prettier": "2.3.2"
-  },
-  "dependencies": {}
+  "homepage": "https://github.com/salmuzblues/reverse-sentence#readme"
 }
